force-app/main/default/objects/Loan_Calculator__c/Loan_Calculator__c.object-meta.xml
<CustomObject>
    <label>Loan Calculation</label>
    <nameField>
        <displayFormat>LC-{000000000}</displayFormat>
        <label>Loan Calculator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>