force-app/main/default/objects/Loan_Calculator__c/fields/Ability_to_Service_UL__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Service_UL__c</fullName>
    <label>Ability to Service UL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>