force-app/main/default/objects/Loan_Calculator__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>JN_Bank_Deposit_Account_Type</valueSetName>
    </valueSet>
</CustomField>