force-app/main/default/objects/Loan_Calculator__c/fields/After_Proposed_Credit__c.field-meta.xml
<CustomField>
    <fullName>After_Proposed_Credit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>After Proposed Credit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>