force-app/main/default/objects/Loan_Calculator__c/fields/Annual_Facility_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Facility_Fee__c</fullName>
    <label>Annual Facility Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>