force-app/main/default/objects/Loan_Calculator__c/fields/Annual_Interest_Rate_on_CC__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate_on_CC__c</fullName>
    <label>Annual Interest Rate on CC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>