force-app/main/default/objects/Loan_Calculator__c/fields/Annual_Membership__c.field-meta.xml
<CustomField>
    <fullName>Annual_Membership__c</fullName>
    <label>Annual Membership</label>
    <length>50</length>
    <type>Text</type>
</CustomField>