force-app/main/default/objects/Loan_Calculator__c/fields/Annual_Membership_Per_sulpplementary__c.field-meta.xml
<CustomField>
    <fullName>Annual_Membership_Per_sulpplementary__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Annual Membership (Per sulpplementary)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>