force-app/main/default/objects/Loan_Calculator__c/fields/Annual_Premium_Rate_LOC__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium_Rate_LOC__c</fullName>
    <label>Annual Premium Rate  LOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>