force-app/main/default/objects/Loan_Calculator__c/fields/App1_Portion_Min_Pay_LOC__c.field-meta.xml
<CustomField>
    <fullName>App1_Portion_Min_Pay_LOC__c</fullName>
    <label>App1 % Portion Min Pay LOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>