force-app/main/default/objects/Loan_Calculator__c/fields/App3_Loan_Amt_Alloc__c.field-meta.xml
<CustomField>
    <fullName>App3_Loan_Amt_Alloc__c</fullName>
    <label>App3 % Loan Amt Alloc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>