force-app/main/default/objects/Loan_Calculator__c/fields/App3_Portion_LOC_Lim__c.field-meta.xml
<CustomField>
    <fullName>App3_Portion_LOC_Lim__c</fullName>
    <label>App3 % Portion LOC Lim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>