force-app/main/default/objects/Loan_Calculator__c/fields/App_1_LOC_limit__c.field-meta.xml
<CustomField>
    <fullName>App_1_LOC_limit__c</fullName>
    <label>App 1 % LOC limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>