force-app/main/default/objects/Loan_Calculator__c/fields/App_1_Min_Payment__c.field-meta.xml
<CustomField>
    <fullName>App_1_Min_Payment__c</fullName>
    <label>App 1 % Min Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>