force-app/main/default/objects/Loan_Calculator__c/fields/App_2_Loan_Amount_UL__c.field-meta.xml
<CustomField>
    <fullName>App_2_Loan_Amount_UL__c</fullName>
    <label>App 2 % Loan Amount UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>