force-app/main/default/objects/Loan_Calculator__c/fields/App_3_LOC_Limit__c.field-meta.xml
<CustomField>
    <fullName>App_3_LOC_Limit__c</fullName>
    <label>App 3 % LOC Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>