force-app/main/default/objects/Loan_Calculator__c/fields/App_3_Min_Payment_LOC__c.field-meta.xml
<CustomField>
    <fullName>App_3_Min_Payment_LOC__c</fullName>
    <label>App 3 % Min Payment LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>