force-app/main/default/objects/Loan_Calculator__c/fields/App_3_Monthly_Payment_A__c.field-meta.xml
<CustomField>
    <fullName>App_3_Monthly_Payment_A__c</fullName>
    <label>App 3 % Monthly Payment A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>