force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_1_Existing_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Existing_Monthly_Payment__c</fullName>
    <label>Applicant 1 Existing Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>