force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_1_Gross_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_1_Gross_Monthly_Income__c</fullName>
    <label>Applicant 1 Gross Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>