force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_2_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_Date_of_Birth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant 2 Date of Birth</label>
    <type>Date</type>
</CustomField>