force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_2_existing_monthly_credit__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_existing_monthly_credit__c</fullName>
    <label>Applicant 2 existing monthly credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>