force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_2_JN_Employee__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2_JN_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant 2 JN Employee</label>
    <type>Checkbox</type>
</CustomField>