force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_3_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3_Date_of_Birth__c</fullName>
    <label>Applicant 3 Date of Birth</label>
    <type>Date</type>
</CustomField>