force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_3_Existing_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3_Existing_Monthly__c</fullName>
    <label>Applicant 3 Existing Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>