force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_3_Gross_Monthly_income__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3_Gross_Monthly_income__c</fullName>
    <label>Applicant 3 Gross Monthly income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>