force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_3_Jn_Employee__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3_Jn_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant 3 Jn Employee</label>
    <type>Checkbox</type>
</CustomField>