force-app/main/default/objects/Loan_Calculator__c/fields/Applicant_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applicant 3 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>