force-app/main/default/objects/Loan_Calculator__c/fields/Applocant_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Applocant_2_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Applocant 2 Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>