force-app/main/default/objects/Loan_Calculator__c/fields/Auto_Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_Purpose__c</fullName>
    <label>Auto Loan Purpose</label>
    <picklist>
        <picklistValues>
            <fullName>Purchase a Motor Vehicle</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Refinance existing Auto Loan</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Equity in a Motor Vehicle</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>