force-app/main/default/objects/Loan_Calculator__c/fields/Auto_Processing_Fees__c.field-meta.xml
<CustomField>
    <fullName>Auto_Processing_Fees__c</fullName>
    <description>Auto Loan Processing Fees</description>
    <label>Auto Processing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>