force-app/main/default/objects/Loan_Calculator__c/fields/Collateral_Auto__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Auto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Auto</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel>Loan Calculations</relationshipLabel>
    <relationshipName>Loan_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>