force-app/main/default/objects/Loan_Calculator__c/fields/Collateral_Personal_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Personal_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Personal  Credit Card</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel>Loan Calculations (Collateral Personal  Credit Card)</relationshipLabel>
    <relationshipName>Loan_Calculations1</relationshipName>
    <type>Lookup</type>
</CustomField>