force-app/main/default/objects/Loan_Calculator__c/fields/Collateral_Personal_Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Personal_Line_of_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Personal Line of Credit</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel>Loan Calculations (Collateral Personal Line of Credit)</relationshipLabel>
    <relationshipName>Loan_Calculations2</relationshipName>
    <type>Lookup</type>
</CustomField>