force-app/main/default/objects/Loan_Calculator__c/fields/Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Type__c</fullName>
    <label>Collateral Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash-JNB-High Yield Account</fullName>
            </value>
            <value>
                <fullName>Cash-JNB-Direct Gain Account</fullName>
            </value>
            <value>
                <fullName>Cash-JNFM-Repo Agreement</fullName>
            </value>
            <value>
                <fullName>Cash-JNFM-Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Real-Estate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>