force-app/main/default/objects/Loan_Calculator__c/fields/Credit_Risk_Rating_CC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Rating_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Risk Rating CC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>