force-app/main/default/objects/Loan_Calculator__c/fields/Credit_Risk_Rating_Prior_UL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Rating_Prior_UL__c</fullName>
    <label>Credit Risk Rating Prior UL</label>
    <length>40</length>
    <type>Text</type>
</CustomField>