force-app/main/default/objects/Loan_Calculator__c/fields/Credit_Risk_Rating_UL__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Rating_UL__c</fullName>
    <label>Credit Risk Rating UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>