force-app/main/default/objects/Loan_Calculator__c/fields/Credit_Risk_Score_Auto__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Score_Auto__c</fullName>
    <label>Credit Risk Score Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>