force-app/main/default/objects/Loan_Calculator__c/fields/Credit_Risk_Score_LOC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Score_LOC__c</fullName>
    <label>Credit Risk Score LOC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>