force-app/main/default/objects/Loan_Calculator__c/fields/Creditor_Life_Denial_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Creditor_Life_Denial_Reason_Text__c</fullName>
    <description>Creditor Life Denial Reason</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Creditor Life Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>