force-app/main/default/objects/Loan_Calculator__c/fields/Date_of_Last_Valuation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Valuation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Last Valuation</label>
    <type>Date</type>
</CustomField>