force-app/main/default/objects/Loan_Calculator__c/fields/Deduct_1st_moth_Payment_from_Loan__c.field-meta.xml
<CustomField>
    <fullName>Deduct_1st_moth_Payment_from_Loan__c</fullName>
    <label>Deduct 1st month Payment from Loan</label>
    <picklist>
        <picklistValues>
            <fullName>Yes</fullName>
            <color>#FFFFFF</color>
        </picklistValues>
        <picklistValues>
            <fullName>No</fullName>
            <color>#FFFFFF</color>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>