force-app/main/default/objects/Loan_Calculator__c/fields/Deposit_Account_Balance_Number__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Balance_Number__c</fullName>
    <description>Deposit Account Balance</description>
    <label>Deposit Account Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>