force-app/main/default/objects/Loan_Calculator__c/fields/Deposit_Account_Number_LOC__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Number_LOC__c</fullName>
    <label>Deposit Account Number LOC</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>