force-app/main/default/objects/Loan_Calculator__c/fields/Deposit_Account_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account_Number_Text__c</fullName>
    <description>Deposit Account Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>