force-app/main/default/objects/Loan_Calculator__c/fields/Desired_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Payments__c</fullName>
    <label>Desired Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>