force-app/main/default/objects/Loan_Calculator__c/fields/Desired_Monthly_Repayment_Date_LOC__c.field-meta.xml
<CustomField>
    <fullName>Desired_Monthly_Repayment_Date_LOC__c</fullName>
    <label>Desired Monthly Repayment Date LOC</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>