force-app/main/default/objects/Loan_Calculator__c/fields/Desired_Statement_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Statement_Date__c</fullName>
    <label>Desired Statement Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>