force-app/main/default/objects/Loan_Calculator__c/fields/Exception_Approval_Date_LOC__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval_Date_LOC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Approval Date LOC</label>
    <type>Date</type>
</CustomField>