force-app/main/default/objects/Loan_Calculator__c/fields/Exception_Approval_Date_UL__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approval_Date_UL__c</fullName>
    <label>Exception Approval Date UL</label>
    <type>Date</type>
</CustomField>