force-app/main/default/objects/Loan_Calculator__c/fields/Exception_Approved_by_Auto__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved_by_Auto__c</fullName>
    <label>Exception Approved by Auto</label>
    <length>40</length>
    <type>Text</type>
</CustomField>