force-app/main/default/objects/Loan_Calculator__c/fields/Exception_Approved_by_CC__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approved_by_CC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exception Approved by CC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>